crates/cli/tests/snapshots/run@infix_op.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/infix_op.nemo
    - "--output"
    - tests/build/infix_op.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/infix_op.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
