crates/cli/tests/snapshots/run@return.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/return.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/return.nemo
---
success: true
exit_code: 0
----- stdout -----
0

----- stderr -----
