crates/cli/tests/snapshots/run@variants.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/variants.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/variants.nemo
---
success: true
exit_code: 0
----- stdout -----
a
b
c
2
3.0999999046325684
4
0

----- stderr -----
