crates/cli/tests/snapshots/run_wasmtime@block.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/block.nemo
---
Success: 0
1
2
4
